--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,9 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Service account authentication json
+rimorse2*.json
+
 # Exceptions to the above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
